# moveit_bot_kinematics_plugin

./: CMakeLists.txt  README.md  moveit_bot_kinematics_plugin_description.xml  package.xml
include/bot_kinematics/: bot_kinematics.h  bot_kinematics_utils.h
include/moveit_bot_kinematics_plugin/: moveit_bot_kinematics_plugin.h
src/: moveit_bot_kinematics_plugin.cpp
